option java_package = "com.app.empire.protocol.pb.player";
option java_outer_classname = "PlayerInfoMsgProto";

import "warField/PostionMsg.proto";
message PlayerInfoMsg {
	optional int32 playerId=1; //角色ID
	optional string nickName=2; //昵称
	optional int32 level=3; //等级
	optional int32 exp=4; //当前经验
	optional int32 money=5; //金币
	optional int32 bindCash=6; //绑定仙玉
	optional int32 vipLevel=7; //VIP等级
	optional int32 fight=8; //战斗力
	optional int32 skinId=9; //皮肤
	optional int32 fashionId=10; //时装ID
	optional int32 weaponId=11; //武器ID
	optional int32 mountId=12; //坐骑ID
	optional int32 magicWeapon_id=13; //法宝ID
	optional int32 wingId=14; //翅膀ID
	optional int32 pBagCount=15; //用户背包格子数
	optional PostionMsg postionMsg=16; //当前位置
	optional int32 cash = 17; // 非绑定仙玉
	optional int32 guildId = 18; // 所在帮派ID
	optional string guildName = 19; // 所在帮派名字
	optional int32 guildJob = 20; // 自己在帮派的职位
	optional int32 battleMode=21; // 战斗模式
	optional int32 pkVal=22; // pk值
	optional int32 repair = 23; // 修为
	//optional int32 points = 24; //积分
	optional int32 job = 25; //职业
	optional int32 equipExp = 26; // 装备经验
	optional int32 weaponAwaken = 27; // 当前武器觉醒等级
	optional int32 stateLv = 28; //境界等级
}
